[blog] Update gnn - GraphSAGE

--- a/_posts/2020-02-10-gnn.md
+++ b/_posts/2020-02-10-gnn.md
@@ -10,8 +10,8 @@ tags: [dl,graph]
 
 关于图数据挖掘/表示学习的内容强烈建议去看Stanford [Jure Leskovec](https://cs.stanford.edu/people/jure/)的[Tutorial - Representation Learning on Networks (WWW'18)](http://snap.stanford.edu/proj/embeddings-www/)。
 
-[前一节]({% post_url 2020-02-10-dsl %})的图嵌入方法都是非常浅(shallow)的，通过学习得到一个矩阵/查找表，来得到结点的嵌入向量。但是这种方法有以下几点缺陷：
-* 需要$O(|V|)$的参数量：没有任何参数的共享，所有结点都只有它自己的嵌入向量
+[前一节]({% post_url 2020-02-06-graph-embedding %})的图嵌入方法都是非常浅(shallow)的，通过学习得到一个矩阵/查找表，来得到结点的嵌入向量。但是这种方法有以下几点缺陷：
+* 需要$O(\vert V\vert)$的参数量：没有任何参数的共享，所有结点都只有它自己的嵌入向量
 * 内在传导(transductive)：很难生成一个没见过的结点的嵌入
 * 无监督方法：没有将结点特征有机整合，而只是关注于图结构
 
@@ -41,7 +41,7 @@ $$H^{(k+1)}=f(H^{(k)},A)=\sigma(AH^{(k)}W^{(k)})$$
 3. 对一系列的结点计算图进行训练
 4. 生成结点嵌入
 
-注意到$W_k$和$B_k$都是共享参数，因此模型参数的复杂度是关于$|V|$次线性的。同时，这种方法可以扩展到未见过的结点。
+注意到$W_k$和$B_k$都是共享参数，因此模型参数的复杂度是关于$\vert V\vert$次线性的。同时，这种方法可以扩展到未见过的结点。
 
 ## GCN[^1]
 关于GCN的详细介绍，可见论文一作的[博客](https://tkipf.github.io/graph-convolutional-networks/)。
@@ -62,14 +62,32 @@ $$H^{(k+1)}=f(H^{(k)},A)=\sigma(\hat{D}^{-\frac{1}{2}}\hat{A}\hat{D}^{-\frac{1}{
 
 $$h_v^{(k+1)}=\sigma\left(W_k\sum_{u\in N(v)\cup v}\frac{\mathbb{h}_u^{(k)}}{\sqrt{|N(u)||N(v)|}}\right)$$
 
-总的时间复杂度是$O(|E|)$$。
+总的时间复杂度是$O(\vert E\vert)$$。
 
 GCN很强的一点在于，它还没训练就已经达到[DeepWalk]({% post_url 2020-02-06-graph-embedding %})的水准了。比如下图展示的是未训练的3层GCN结点嵌入情况，矩阵都是随机初始化的。
+
 <table><tr>
-<td><img src="https://tkipf.github.io/graph-convolutional-networks/images/karate.png" border=0></td>
-<td><img src="https://tkipf.github.io/graph-convolutional-networks/images/karate_emb.png" border=0></td>
+<td><img src="https://tkipf.github.io/graph-convolutional-networks/images/karate.png"></td>
+<td><img src="https://tkipf.github.io/graph-convolutional-networks/images/karate_emb.png"></td>
 </tr></table>
 
+
+## GraphSAGE[^2]
+GraphSAGE (<u>SA</u>mple & aggre<u>G</u>at<u>E</u>)则是进一步将聚合的思想一般化，之前的聚合函数都是取平均，那现在我采用任意的聚合函数，得到
+
+$$h_v^{(k+1)}=\sigma([W_k\cdot \mathop{AGG}(\{\mathbb{h}_{u}^{(k)},\forall u\in N(v)\}),B_k\mathbb{h}_v^{(k)}])$$
+
+注意中括号表示两个向量（自嵌入+邻居嵌入）直接合并，邻居在GraphSAGE中并不取全部，而是随机取固定数目的邻居。
+
+聚合函数就可以取
+* 平均：最原始方案
+$$\mathop{AGG}=\sum_{u\in N(u)}\frac{\mathbb{h}_{u}^{(k)}}{|N(v)|}$$
+* 池化：$\gamma$为元素间(element-wise)平均/最值
+$$\mathop{AGG}=\gamma(\{Q\mathbb{h}_{u}^{(k)},\forall u\in N(v)\})$$
+* LSTM：$\pi$为随机置换(permutation)
+$$\mathop{AGG}=LSTM([\mathbb{h}_{u}^{(k)},\forall u\in\pi(N(v))])$$
+
+通常GCN和GraphSAGE只需两三层深即可。
 
 ## Reference
 [^1]: Thomas N. Kipf, Max Welling (Amsterdam), *Semisupervised Classification with Graph Convolutional Networks*, ICLR, 2017
