[blog] Update gnn - NeuGraph & references

--- a/_posts/2020-02-10-gnn.md
+++ b/_posts/2020-02-10-gnn.md
@@ -4,7 +4,7 @@ title: 图表示学习（2）-图神经网络
 tags: [dl,graph]
 ---
 
-这是**图表示学习(representation learning)的第二部分——图神经网络(graph neural network, gnn)**，主要涉及GCN [ICLR'17]、GraphSAGE [NeurIPS'17]和NeuGraph [ATC'19]三篇论文。
+这是**图表示学习(representation learning)的第二部分——图神经网络(graph neural network, gnn)**，主要涉及GCN [ICLR'17]、GraphSAGE [NeurIPS'17]、NeuGraph [ATC'19]和 AliGraph [VLDB'19]四篇论文。
 
 <!--more-->
 
@@ -89,7 +89,38 @@ $$\mathop{AGG}=LSTM([\mathbb{h}_{u}^{(k)},\forall u\in\pi(N(v))])$$
 
 通常GCN和GraphSAGE只需两三层深即可。
 
+从某种意义上，GCN有点像循环神经网络，因为GCN在每一层上都是共享参数的，而每一层就是一整个graph平展开来，每一层的计算都是传播一hop的计算，只有当这一层计算完了（图遍历完了），才进入到下一层的计算。
+
+![gnn](https://d3i71xaburhd42.cloudfront.net/7a47891bc52c93c48c4a9309f61d5b16a2c5459c/3-Figure1-1.png)
+
+## NeuGraph[^3]
+**深度学习系统最大问题在于没有办法高效表示图数据，而图系统最大的问题在于没法自动微分！**
+
+现有用得最广泛的框架是[DGL (Deep Graph Library)](https://github.com/dmlc/dgl)，但DGL只是提供了一个编程框架（面向图的消息传递模型），并没有深度解决计算的问题（这很大程度也是GCN很难火起来的原因，因为无法做到很高的可扩展性）。在GCN的原作[实现](https://github.com/tkipf/gcn)和GraphSAGE的原作[实现](https://github.com/williamleif/GraphSAGE)中，都使用了TensorFlow进行编程，但是他们所采用的方法都是简单暴力的矩阵乘，这样其实很大程度忽略了图计算框架这些年取得的成果。因此NeuGraph的出现也正是为了弥合这两者，将图计算与深度学习有机地融合起来。
+
+（之前以为腾讯的[Plato](https://github.com/Tencent/plato)作为企业级图系统，应该可以支持GNN的计算，然而Plato只是将[Gemini](https://github.com/thu-pacman/GeminiGraph)和[KnightKing]({% post_url 2020-02-06-graph-embedding %})套了个壳，所以目前也只支持这两个框架所支持的算法，即传统的图算法以及随机游走。）
+
+NeuGraph把常见的GNN分为三类：图卷积、图循环、图注意力网络。
+进而提出了SAGA-NN (Scatter-ApplyEdge-Gather-ApplyVertex with Neural Networks)编程模型，其中<u>S</u>A<u>G</u>A部分属于图计算的消息传递，而两个A则是深度学习神经网络的应用。
+
+![saga-nn](https://d3i71xaburhd42.cloudfront.net/7a47891bc52c93c48c4a9309f61d5b16a2c5459c/4-Figure2-1.png)
+
+由于GCN相比起传统的图算法来说（在图计算层面上）要简单很多，就是对全图不断进行遍历，因此Scatter和Gather是确定的，而两个Apply阶段则是用户自定义的函数。
+
+### Graph-Aware Dataflow Translation
+目前的深度学习框架都很难处理大图，因为GPU的内存无法存储这么大规模的图，因此NeuGraph在数据流抽象的基础上进行了图划分。
+
+
+## AliGraph[^4]
+
+
 ## Reference
-[^1]: Thomas N. Kipf, Max Welling (Amsterdam), *Semisupervised Classification with Graph Convolutional Networks*, ICLR, 2017
+[^1]: Thomas N. Kipf, Max Welling (Amsterdam), *Semisupervised Classification with Graph Convolutional Networks*, ICLR, 2017 ([**Most cited publication**](https://github.com/naganandy/graph-based-deep-learning-literature))
 [^2]: William L. Hamilton, Rex Ying, Jure Leskovec (Stanford), *Inductive Representation Learning on Large Graphs*, NeurIPS, 2017
 [^3]: Lingxiao Ma, Zhi Yang, Youshan Miao, Jilong Xue, Ming Wu, Lidong Zhou (MSRA), Yafei Dai (PKU), *NeuGraph: Parallel Deep Neural Network Computation on Large Graphs*, ATC, 2019
+[^4]: Rong Zhu, Kun Zhao, Hongxia Yang, Wei Lin, Chang Zhou, Baole Ai, Yong Li, Jingren Zhou (Alibaba), *AliGraph: A Comprehensive Graph Neural Network Platform*, VLDB, 2019
+
+## Other Resources
+* Stanford Network Analysis Project (SNAP): <http://snap.stanford.edu/>
+* Geometric Deep Learning: <http://geometricdeeplearning.com/>
+* Innovations in Graph Representation Learning: <https://ai.googleblog.com/2019/06/innovations-in-graph-representation.html>
