--- a/_posts/2020-02-10-gnn.md
+++ b/_posts/2020-02-10-gnn.md
@@ -71,6 +71,7 @@ GCN很强的一点在于，它还没训练就已经达到[DeepWalk]({% post_url 
 <td><img src="https://tkipf.github.io/graph-convolutional-networks/images/karate_emb.png"></td>
 </tr></table>
 
+至于为什么是卷积，想想卷积核在稀疏邻接矩阵上划过，聚合时实际上就相当于做卷积了。
 
 ## GraphSAGE[^2]
 GraphSAGE (<u>SA</u>mple & aggre<u>G</u>at<u>E</u>)则是进一步将聚合的思想一般化，之前的聚合函数都是取平均，那现在我采用任意的聚合函数，得到
@@ -126,16 +127,45 @@ NeuGraph在TensorFlow上实现，包含5000行的C++代码和3000行的Python代
 
 比较对象包括TensorFlow、GraphSAGE、DGL，提速比在2.5倍到8.1倍之间（单GPU），但没有办法跟多GPU的Tensorflow比，因为直接爆内存了。而不加优化的多GPU版TF-SAGA大概比NerGraph慢2.4到4.9倍，这一部分才比较客观地表明提出的优化方法的高效性。
 
-## AliGraph[^4]
 
+## AliGraph[^4]
+AliGraph是Alibaba内部的图计算系统，已经是商用在淘宝各种预测任务上，并且取得了很好的效果。这篇文章则是从算法到底层系统逐一分析的集大成者。
+
+它提出目前GNN面临着四个问题：**大规模、异构、属性、动态**图。
+
+关于GNN的抽象，AliGraph就比NeuGraph要做得更好一些，因为他们考虑到了采样过程。
+
+{% include image.html fig="Graph/aligraph-gnn.png" width="80" %}
+
+而整体的系统架构从上到下包括应用层、算法层、算子层、采样层和存储层，如下图。
+
+{% include image.html fig="Graph/aligraph-overview.png" width="80" %}
+
+### Storage Level
+* 图划分：采用了四种方法（METIS、顶点/边割、2D划分、流式划分），由用户自行选择
+* 图属性存储：很棒，AliGraph考虑到了图结构(structure)和图属性(attribute)的存储方式（解耦了！），见下图，以索引方式并分开两个表存，这就很数据库了（确保第二范式）。也许会牺牲一定的计算时间，但是考虑到数据量过大，同时属性信息千奇百怪，因此这样存储可能是比较合适的。论文作者也考虑到访问时间的问题，因此加了两个cache在这，用LRU策略。
+
+{% include image.html fig="Graph/aligraph-storage.png" width="80" %}
+
+* 缓存邻居结点：通过计算一个指标来衡量（结点的$k$跳入度除以$k$跳出度），选指标最大的那些进行缓存
+
+### Sampling Level
+考虑三种采样方式：Traverse、Neighborhood、Negative，都是直接调用别人的库。
+
+### Operator Level
+包括Aggreate和Combine两种方式，对应的就是不同种类的GNN。
+
+### Conclusions
+这篇文章有种虎头蛇尾的感觉，实验部分连实验平台都没有提，也没有提AliGraph是怎么实现的（当时去参加CNCC'19印象中是他们直接在TensorFlow上搭建），更多是像在推销自家提出来的几种GNN有多强。说实话没有太多系统层面的优化，都是直接套用别人的东西，然后融合为几个层就结束了，更没有考虑层与层之间的交互。也许本文当成综述性的文章更为合适，不过它也确实提到了现在这些互联网大厂在关心什么问题，以及他们的解决思路。
+
+
+## Other Resources
+* Stanford Network Analysis Project (SNAP): <http://snap.stanford.edu/>
+* Geometric Deep Learning: <http://geometricdeeplearning.com/>
+* Innovations in Graph Representation Learning: <https://ai.googleblog.com/2019/06/innovations-in-graph-representation.html>
 
 ## Reference
 [^1]: Thomas N. Kipf, Max Welling (Amsterdam), *Semisupervised Classification with Graph Convolutional Networks*, ICLR, 2017 ([**Most cited publication**](https://github.com/naganandy/graph-based-deep-learning-literature))
 [^2]: William L. Hamilton, Rex Ying, Jure Leskovec (Stanford), *Inductive Representation Learning on Large Graphs*, NeurIPS, 2017
 [^3]: Lingxiao Ma, Zhi Yang, Youshan Miao, Jilong Xue, Ming Wu, Lidong Zhou (MSRA), Yafei Dai (PKU), *NeuGraph: Parallel Deep Neural Network Computation on Large Graphs*, ATC, 2019
 [^4]: Rong Zhu, Kun Zhao, Hongxia Yang, Wei Lin, Chang Zhou, Baole Ai, Yong Li, Jingren Zhou (Alibaba), *AliGraph: A Comprehensive Graph Neural Network Platform*, VLDB, 2019
-
-## Other Resources
-* Stanford Network Analysis Project (SNAP): <http://snap.stanford.edu/>
-* Geometric Deep Learning: <http://geometricdeeplearning.com/>
-* Innovations in Graph Representation Learning: <https://ai.googleblog.com/2019/06/innovations-in-graph-representation.html>
