[blog] Fix bugs in grl

--- a/_posts/2020-02-10-gnn.md
+++ b/_posts/2020-02-10-gnn.md
@@ -56,13 +56,13 @@ $$H^{(k+1)}=f(H^{(k)},A)=\sigma(AH^{(k)}W^{(k)})$$
 
 进而得到GCN的传播规则
 
-$$H^{(k+1)}=f(H^{(k)},A)=\sigma(\hat{D}^{-\frac{1}{2}}\hat{A}\hat{D}^{-\frac{1}{2}}H^{(k)}W^{(k)})$$
+$$H^{(k+1)}=f(H^{(k)},A)=\sigma\left(\hat{D}^{-\frac{1}{2}}\hat{A}\hat{D}^{-\frac{1}{2}}H^{(k)}W^{(k)}\right)$$
 
 用向量形式来写即
 
 $$h_v^{(k+1)}=\sigma\left(W_k\sum_{u\in N(v)\cup v}\frac{\mathbb{h}_u^{(k)}}{\sqrt{|N(u)||N(v)|}}\right)$$
 
-总的时间复杂度是$O(\vert E\vert)$$。
+总的时间复杂度是$O(\vert E\vert)$。
 
 GCN很强的一点在于，它还没训练就已经达到[DeepWalk]({% post_url 2020-02-06-graph-embedding %})的水准了。比如下图展示的是未训练的3层GCN结点嵌入情况，矩阵都是随机初始化的。
 
