[blog] Add more insights

--- a/_posts/2020-02-10-gnn.md
+++ b/_posts/2020-02-10-gnn.md
@@ -31,7 +31,20 @@ tags: [dl,graph]
 
 $$H^{(k+1)}=f(H^{(k)},A)=\sigma(AH^{(k)}W^{(k)})$$
 
-其中$A\in\mathbb{R}^{n\times n}$为邻接阵，$H\in\mathbb{R}^{n\times d}$为特征阵（注意这里一行为一个结点的嵌入向量，与前面的向量写法不同），$W\in\mathbb{R}^{d\times d}$为每一层的训练权重矩阵。$A$与$H$相乘相当于与$v_i$邻接的结点的第$j$个特征进行聚合，得到$(i,j)$矩阵元素。
+其中$A\in\mathbb{R}^{n\times n}$为邻接阵，$H\in\mathbb{R}^{n\times d_{in}}$为特征阵（注意这里一行为一个结点的嵌入向量，与前面的向量写法不同），$W\in\mathbb{R}^{d_{in}\times d_{out}}$为每一层的训练权重矩阵（注意到这里是**全层共享参数**）。这里可划分为两个步骤：**消息聚合**与**特征更新**。
+
+第一部分**消息聚合**，即$A$与$H$左乘（稀疏矩阵乘稠密矩阵，图计算），相当于考虑$A$的第$i$行，即第$i$个结点$v_i$，与其邻接的结点的第$j$个特征进行聚合，得到$(i,j)$矩阵元素。
+
+$$(AH^{(k)})_{ij}=\sum_{l}a_{il}h_{lj}=\sum_{v_l\in \mathcal{N}(v_i)}h_{v_l j}
+\implies \mathbf{h}_i=\sum_{v_l\in \mathcal{N}(v_i)}\mathbf{h}_{l}$$
+
+第二部分**特征更新**，将聚合的特征与参数矩阵相乘（稠密阵乘稠密阵，深度学习）
+
+$$\mathbf{h}_i^{(k+1)}=\left(\sum_{v_l\in \mathcal{N}(v_i)}\mathbf{h}_{l}^{(k)}\right)W^{(k)}
+=\sum_{v_l\in \mathcal{N}(v_i)}\mathbf{h}_{l}^{(k)}W^{(k)}$$
+
+由于矩阵乘符合**结合律**，故消息聚合与特征更新顺序可以互换。
+如果先聚合再算更新，则对于结点$i$来说需要做$d_i$次维度$d_{in}$的加法与$1$次乘法$d_{in}\mapsto d_{out}$，由握手定理，全图一共是$2|E|$次加法与$|V|$次矩阵向量乘（或$1$次矩阵矩阵乘）；而先更新再聚合，对于结点$i$需要做$d_i$次维度$d_{out}$的加法与$d_i$次乘法，全图则是$O(|E|)$的时间复杂度。但事实上由于邻居结点会被多个结点共享，因此用矩阵矩阵乘提前算出$H^{(k)}W^{(k)}$，再去索引聚合，乘法次数同样是$1$次。
 
 这里就可以采用前面的无监督方法作为损失函数，或者用有监督的模型来构造。
 
@@ -51,8 +64,8 @@ $$H^{(k+1)}=f(H^{(k)},A)=\sigma(AH^{(k)}W^{(k)})$$
 $$H^{(k+1)}=f(H^{(k)},A)=\sigma(AH^{(k)}W^{(k)})$$
 
 尽管该模型已经很强大，但是仍然存在以下两个问题，这也是文[^1]所要解决的：
-1. 注意到$AH^{(k)}$聚合特征时并未将自身考虑进去，因此可以简单给每个结点添加自环，即$\hat{A}=A+I$
-2. 每个结点的度并不相同，导致$AH^{(k)}$计算时会改变特征向量的比例(scale)，那么简单的想法是类似PageRank一样对邻接阵$A$的每一行归一化，即$D^{-1}A$，其中$D$是度对角阵（取逆相当于对角线上元素，即每个结点的度数，直接取倒数）。而如果采用对称的归一化技术（即出入度都考虑），那就得到$D^{-1/2}AD^{-1/2}$。
+1. 注意到$AH^{(k)}$消息聚合时并未将自身考虑进去，因此可以简单地给每个结点添加自环，即$\hat{A}=A+I$
+2. 每个结点的度并不相同，导致$AH^{(k)}$计算时会改变特征向量的比例(scale)，那么简单的想法是类似PageRank一样对邻接阵$A$的每一行归一化，即$D^{-1}A$，其中$D$是度对角阵（取逆相当于对角线上元素，即每个结点的度数，直接取倒数）。而如果采用对称的归一化技术（即出入度都考虑），那就得到$D^{-1/2}AD^{-1/2}$。（对称阵的计算可见[图论基础]({% post_url 2020-02-24-graph-theory %})）
 
 进而得到GCN的传播规则
 
@@ -60,7 +73,7 @@ $$H^{(k+1)}=f(H^{(k)},A)=\sigma\left(\hat{D}^{-\frac{1}{2}}\hat{A}\hat{D}^{-\fra
 
 用向量形式来写即
 
-$$h_v^{(k+1)}=\sigma\left(W_k\sum_{u\in N(v)\cup v}\frac{\mathbb{h}_u^{(k)}}{\sqrt{|N(u)||N(v)|}}\right)$$
+$$\mathbf{h}_v^{(k+1)}=\sigma\left(\sum_{u\in N(v)\cup v}\frac{\mathbf{h}_u^{(k)}}{\sqrt{|N(u)||N(v)|}}W^{(k)}\right)$$
 
 总的时间复杂度是$O(\vert E\vert)$。
 
