[blog] Add materials for FPGA

--- a/_posts/2019-02-08-fpga-all.md
+++ b/_posts/2019-02-08-fpga-all.md
@@ -7,7 +7,7 @@ tag: [fpga, hls]
 ## What is FPGA? Why FPGA?
 可编程门阵列(Field-Programmable Gate Array, FPGA)是一种**并行**的**非冯架构**硬件，其最大的亮点就在于**可编程/可重构**(reconfigurable)。
 
-由于FPGA的每个逻辑单元在重编程/烧写时已经确定，故它不需要指令，也不需共享内存
+由于FPGA的每个逻辑单元在重编程/烧写时已经确定，故它不需要指令，也不需共享内存。它的逻辑块、交互连接(interconnects)、IO接口都是可编程的。
 
 FPGA的优势在于
 * 比CPU快
@@ -21,12 +21,14 @@ FPGA上主要有两种资源，一种是逻辑(logic)，一种是连接(intercon
 
 ### 逻辑资源
 * 最底层的，用真值表可以实现绝大多数算法，真值表是FPGA计算的核心，即将几个简单的逻辑表达式整合为一个真值表
-* 而实现真值表的硬件资源即为查找表(LUT)，是FPGA**最小计算单元**；物理实施用N:1选择器和N位存储器
+* 而实现真值表的硬件资源即为查找表(Look-up table, LUT)，是FPGA**最小计算单元**；物理实施用N:1选择器(multiplexer)和N位存储器
 * LUT的大小和每个逻辑块内LUT的数量是需要关心的问题，目前大多FPGA采用4-LUT结构
 * LUT添加D触发器即可存储状态
 ![A simple LUT logic block]({{"/assets/images/FPGA/LUT.PNG"|absolute_url}})
 
-* 目前的FPGA采用岛式(island-style)结构，多个LUT构成一个逻辑块(logic/function block)
+* 目前的FPGA采用岛式(island-style)结构，多个LUT构成一个逻辑块(logic/function block)。在Xilinx 7系列FPGA中，每个可配置逻辑块(configurable logic block, CLB)包含两个slice，每个slice包含4个LUT。
+![CLB]({{"/assets/images/FPGA/CLB.PNG"|absolute_url}})
+
 * 多个逻辑块就构成阵列(array)
 ![The island-style FPGA architecture]({{"/assets/images/FPGA/island-style.PNG"|absolute_url}})
 这里每一个逻辑块就可以看成是岛屿，漂浮在交互连线的海洋上
@@ -43,6 +45,9 @@ FPGA上主要有两种资源，一种是逻辑(logic)，一种是连接(intercon
 * CLB：Configurable Logic Block，逻辑块
 * Memory：Block RAM (BRAM)，片上内存
 * DSP：Digital Signal Processing
+
+现代的FPGA多采用异构架构，里面有定制化的DSP块，比LUT要快很多（可以理解成ASIC）
+![Modern Heterogeneous FPGA]({{"/assets/images/FPGA/hetero-soc.jpg"|absolute_url}})
 
 ## FPGA综合流程
 要将软件程序映射到硬件上运行，就要通过编译(compilation)，而在硬件中则通常称为综合(synthesis)，下面是FPGA的主要综合流程（参照Xilinx Vivado的流程）
