--- a/_posts/2019-02-12-pynq.md
+++ b/_posts/2019-02-12-pynq.md
@@ -12,6 +12,24 @@ tag: fpga
 
 <!--more-->
 
+![zynq]({{"/assets/images/FPGA/zynq.jpg"|absolute_url}})
+
+## 基本架构
+Zynq包含一个**双核ARM Cortex-A9处理器**和一个**传统的FPGA**，其中在ARM上可运行Linux操作系统，而FPGA架构则是Xilinx 7的架构。同时该SoC实现了工业标准的AXI接口(Advanced eXtensible Interface, AXI)，在芯片两个部分实现了高带宽和低延迟的连接。
+
+ARM通常被认为时处理系统(process system, PS)，用于支持软件程序或操作系统；而FPGA相当于可编程逻辑(programming logic, PL)，用来实现高速逻辑、算术和数据流子系统。
+
+![simplified zynq]({{"/assets/images/FPGA/simplified-zynq.jpg"|absolute_url}})
+
+其中的外设，也就是所谓的IP核(Intellectual Property)，既可以从Xilinx的库中获得，又可从开源项目中得到，或者自己创造，最终集成起来形成系统设计。
+
+事实上，Zynq的处理系统里并非只有ARM处理器，还有一组相关的处理资源，形成一个应用处理器单元(Application Processing Unit, APU)
+
+![simplified zynq]({{"/assets/images/FPGA/arm-cortex-a9.jpg"|absolute_url}})
+
+两级Cache层次结构，L1都是32KB，L2为512KB，还有一个片上存储器(On-chip memory, OCM)为512KB，最高工作频率可达到1GHz。
+
+
 ## [优势](https://pynq.readthedocs.io/en/v2.3/index.html)
 Pynq目的是让开发者更易对嵌入式系统进行编程，而不用采用综合工具，通过以下三点实现：
 * 可编程的逻辑电路都以硬件库(libraries)的形式呈现，称为覆盖(overlays)。
