[blog] Fix bugs and descriptions

--- a/_posts/2019-02-12-pynq.md
+++ b/_posts/2019-02-12-pynq.md
@@ -29,6 +29,8 @@ ARM通常被认为时处理系统(process system, PS)，用于支持软件程序
 
 两级Cache层次结构，L1都是32KB，L2为512KB，还有一个片上存储器(On-chip memory, OCM)为512KB，最高工作频率可达到1GHz。
 
+Zynq Z7020集成的SoC又被称为[Pynq Z1/Z2](http://www.pynq.io/board.html)，上面有512MB的DDR3内存。
+
 
 ## [优势](https://pynq.readthedocs.io/en/v2.3/index.html)
 Pynq目的是让开发者更易对嵌入式系统进行编程，而不用采用综合工具，通过以下三点实现：
