[blog] Fix tags

--- a/_posts/2019-02-25-skylake.md
+++ b/_posts/2019-02-25-skylake.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Skylake架构简析
-tag: architecture
+tag: arch
 ---
 
 因为实验室服务器的CPU是Intel Xeon Gold系列，所以这里简要介绍一下Intel的Skylake-SP架构。
@@ -18,13 +18,13 @@ Skylake桌面版和Skylake服务器版(SP)最大的区别在于cache的层次结
 
 实验室服务器Intel Gold 5118的cache层次结构如下
 ```
-Cache Organization 
-L1$     768 KiB 
-L1I$    384 KiB 12x32 KiB       8-way set associative    
+Cache Organization
+L1$     768 KiB
+L1I$    384 KiB 12x32 KiB       8-way set associative
 L1D$    384 KiB 12x32 KiB       8-way set associative   write-back
-L2$     12 MiB  
+L2$     12 MiB
                 12x1 MiB        16-way set associative  write-back
-L3$     16.5 MiB        
+L3$     16.5 MiB
                 12x1.375 MiB    11-way set associative  write-back
 ```
 
