--- a/_posts/2019-03-07-x86-asm.md
+++ b/_posts/2019-03-07-x86-asm.md
@@ -1,10 +1,10 @@
 ---
 layout: post
 title: x86架构与汇编语言
-tag: [pl, os, architecture]
+tag: [pl, os, arch]
 ---
 
-本节简要说明x86架构及x86汇编语言的使用。
+本文简要说明x86架构及x86汇编语言的使用。
 
 <!--more-->
 
@@ -74,7 +74,7 @@ var DB 64
 var2 DB ? ; uninitialized byte
     DB 10 ; no label, location is var2 + 1.
 X DW ?    ; 2B uninitialized
-Y DD 30000; 
+Y DD 30000;
 str	DB 'hello',0; 6 bytes starting at str
 ```
 
@@ -126,7 +126,7 @@ _myFunc PROC
   add eax, [ebp-4]   ; Add the contents of the local variable
                      ; into EAX (final result)
 
-  ; Subroutine Epilogue 
+  ; Subroutine Epilogue
   pop esi      ; Recover register values
   pop  edi
   mov esp, ebp ; Deallocate local variables
@@ -177,7 +177,7 @@ The netwide assembler(NASM)是80x86和x86-64系列的汇编器
 * [伪指令](https://www.nasm.us/xdoc/2.14.02/html/nasmdoc3.html#section-3.2)
 
 ```assembly
-message db 'hello, world' 
+message db 'hello, world'
 msglen equ ($-message)
 
 zerobuf: times 64 db 0 ; executed n times
@@ -188,10 +188,10 @@ zerobuf: times 64 db 0 ; executed n times
 * [宏](https://www.nasm.us/xdoc/2.14.02/html/nasmdoc4.html#section-4.1)`%define`
 
 ```assembly
-%macro  prologue 1 
-    push  ebp 
-    mov   ebp,esp 
-    sub   esp,%1 
+%macro  prologue 1
+    push  ebp
+    mov   ebp,esp
+    sub   esp,%1
 %endmacro
 ```
 
