[blog] Update git

--- a/_posts/2019-06-27-git.md
+++ b/_posts/2019-06-27-git.md
@@ -7,11 +7,15 @@ tag: [tools]
 虽然Github Desktop用得很爽，但是偶尔也会有一些特殊的需求，故还是在此记录一下。
 
 <!--more-->
-
-* 添加要提交的文件：`git add xxx.cpp`
-* 提交到暂存区：`git commit -m "update log"`
-* 推到远端仓库：`git push`
+* 初始化：`git init project`
 * 查看状态：`git status`
+* 查看日志：`git log`
+* 查看文件差异：`git diff file`
+* 查看提交/回复记录：`git reflog`
+* 回滚：`git reset --hard HEAD^`（或者跟哈希码，从`reflog`里得到）
+* 添加要提交的文件：`git add xxx.cpp`
+* 提交到暂存区：`git commit -m "update log"` / `-am`实现添加并提交
+* 推到远端仓库：`git push`
 * 只提交部分文件，同时修改提交时间
 
 ```bash
@@ -20,6 +24,11 @@ git stash -u -k # the most important step
 git commit --date="Thu Jun 27 15:00:00 2019 +0800" -m "xxx"
 git stash pop # pop out modification
 ```
+
+* 创建分支：`git checkout -b dev`
+* 查看分支：`git branch`
+* 切换分支：`git checkout master`
+* 合并分支：`git merge dev`
 
 ## 子模块
 * 添加子模块：`git submodule add <url>`
