[blog] Update TVM GEMM (tiling)

--- a/_posts/2020-03-19-tvm-gemm.md
+++ b/_posts/2020-03-19-tvm-gemm.md
@@ -36,7 +36,7 @@ for (i, 0, M)
 <pre data-src="{{ site.baseurl }}/files/programs/tvm_gemm_cpu.py"></pre>
 
 输出结果如下，可以看到numpy的速度（调用Intel MKL）是比裸GEMM实现$O(n^3)$要快得多的。
-```
+```python
 produce C {
   for (x, 0, 1024) {
     for (y, 0, 1024) {
@@ -57,11 +57,11 @@ Baseline: 2.890711
 ## 循环重排(reordering)
 注意到我们访问数据的模式，对于C和A矩阵来说，我们都是采用**逐行**遍历数据的方式，而对于B则是**逐列**遍历数据。
 
-![traversal order](https://pic1.zhimg.com/v2-63824b31132c24f8a7d847c10a4f5ac4_b.jpg)
+![traversal order](https://sahnimanas.github.io/post/anatomy-of-a-high-performance-convolution/img/naive-traversal.svg)
 
 但是通常情况下，在计算机里我们采用的都是行优先(row-major)存储。如果一个cache line可以装8\*int(32B)，那么按行遍历（正Z型），可以保证每8个访存只有第1个元素miss；而按列遍历，很有可能读入的行数据没有用到就被驱逐出去了，miss rate为100\%。
 
-![cache miss](https://pic3.zhimg.com/v2-90d70c9b7599df629979b392a60d9a5a_b.jpg)
+![cache miss](https://sahnimanas.github.io/post/anatomy-of-a-high-performance-convolution/img/cache-pollution.png)
 
 故一个简单但极其有效的方式就是修改遍历顺序，即循环重排。
 ```python
@@ -73,12 +73,12 @@ for (i, 0, M)
 
 计算结果显然是一样的，但是重排之后，B也变成了行遍历，进而提升了空间局部性，如下图。
 
-![row traversal](https://pic4.zhimg.com/v2-a03f97b81e637e3357224d192c0de167_b.jpg)
+![row traversal](https://sahnimanas.github.io/post/anatomy-of-a-high-performance-convolution/img/reordered.svg)
 
 我们分析下这种模式：
-* 重复扫C数组K次，每次扫同一行（时间局部性好）
-* A的时间局部性同样很高，因为`A[i][k]`被重复用了N次
-* B则是确保了行优先(row-major)存储下的空间局部性
+* 重复扫C数组K次，每次扫同一行（**时间局部性**好）
+* A的**时间局部性**同样很高，因为`A[i][k]`被重复用了N次
+* B则是确保了行优先存储下的**空间局部性**
 
 只需要在TVM中添加一行
 
@@ -88,7 +88,7 @@ s[C].reorder(C.op.axis[0], k, C.op.axis[1])
 
 即可实现循环重排。计算结果如下，可以看到k循环确实放到了中间层，并且速度提升了15倍！
 
-```
+```python
 produce C {
   for (x, 0, 1024) {
     for (y.init, 0, 1024) {
@@ -104,3 +104,62 @@ produce C {
 
 Opt1: 0.190684
 ```
+
+## 循环平铺(tiling)
+再来仔细分析下GEMM的三重循环，虽然我们改变了循环顺序，从而提升了C数组的时间局部性，但是要让这种局部性成立，必须使前面加载进来的元素不会被替换出去。
+
+还是考虑**仅**一个cache line里8个int的例子，最好的情况是1-8一直驻留在cache中，要不然当访问到9时，1就会被剔除。这样来看，最好的情况则是保证数组遍历始终控制在一个很小的范围内，而这个范围由cache大小决定，以保证数组元素能全部驻留在cache中。
+
+类似的道理可分析A和B数组，当A进入到下一行时，B又得从头重新遍历整个矩阵，那么它的重用度/时间局部性是非常差的，因为cache的容量限制，加载进来的元素在后面计算时会被驱逐，当要用时才重新加载回来，造成频繁的cache抖动(thrashing)。
+
+因此解决方式上面已经提了，就是对cache进行分块(blocking)，通过计算小矩阵来提升重用性，确保所有数据都能落在cache中。
+
+将大矩阵C分块，每个块大小64\*64（超参数需要尝试），这样一共占用$2^6\cdot 2^6\cdot 4B=2^{14}B=16KB$的cache容量（按float来计算），而L1 cache现在都做得非常大了，比如我电脑Intel Core i7 CPU的L1 cache已经达到256KB，存储这些数据绰绰有余。
+
+`i`和`j`维度可以用`tile`进行分块，`k`由于是单一维度，故用`split`将一个轴分划为两个轴（分割因子为`factor`），进而可以写出对应的TVM代码。
+
+```python
+# Blocking by loop tiling
+bn = 64
+xo, yo, xi, yi = s[C].tile(C.op.axis[0], C.op.axis[1], x_factor=bn, y_factor=bn)
+k, = s[C].op.reduce_axis
+ko, ki = s[C].split(k, factor=4)
+
+# Hoist reduction domain outside the blocking loop
+s[C].reorder(xo, yo, ko, ki, xi, yi)
+```
+
+运行结果如下，可以看到提升并不是很明显。~~（这说明调参也是技术活）~~
+
+```python
+produce C {
+  for (x.outer, 0, 16) {
+    for (y.outer, 0, 16) {
+      for (x.inner.init, 0, 64) {
+        for (y.inner.init, 0, 64) {
+          C[((((x.outer*65536) + (x.inner.init*1024)) + (y.outer*64)) + y.inner.init)] = 0f
+        }
+      }
+      for (k.outer, 0, 128) {
+        for (k.inner, 0, 8) {
+          for (x.inner, 0, 64) {
+            for (y.inner, 0, 64) {
+              C[((((x.outer*65536) + (x.inner*1024)) + (y.outer*64)) + y.inner)] = (C[((((x.outer*65536) + (x.inner*1024)) + (y.outer*64)) + y.inner)] + (A[((((x.outer*65536) + (x.inner*1024)) + (k.outer*8)) + k.inner)]*B[((((k.outer*8192) + (k.inner*1024)) + (y.outer*64)) + y.inner)]))
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+Opt2: 0.175358
+```
+
+
+
+## References
+* TVM Tutorial: [*How to optimize GEMM on CPU*](https://docs.tvm.ai/tutorials/optimize/opt_gemm.html#sphx-glr-tutorials-optimize-opt-gemm-py)
+* TVM Tutorial: [*Schedule Primitives in TVM*](https://docs.tvm.ai/tutorials/language/schedule_primitives.html)
+* CSAPP
+* Manas Sahni, [*Anatomy of a High-Speed Convolution*](https://sahnimanas.github.io/post/anatomy-of-a-high-performance-convolution/), [中文](https://zhuanlan.zhihu.com/p/85344625)
