[blog] Update TVM GEMM (vectorization)

--- a/_posts/2020-03-19-tvm-gemm.md
+++ b/_posts/2020-03-19-tvm-gemm.md
@@ -156,7 +156,66 @@ produce C {
 Opt2: 0.175358
 ```
 
+## 向量化(vectorization)
+现代的CPU大多都支持SIMD，因此可以通过向量化的方式，来加速计算。
 
+![SIMD](https://sahnimanas.github.io/post/anatomy-of-a-high-performance-convolution/img/simd.png)
+
+在TVM中只需添加下面一行即可实现最内层循环的向量化。
+```python
+s[C].vectorize(yi)
+```
+
+结果如下，同样没有提升，很大原因是构造SIMD也是有数据搬移开销的。
+```python
+produce C {
+  for (x.outer, 0, 16) {
+    for (y.outer, 0, 16) {
+      for (x.inner.init, 0, 64) {
+        C[ramp((((x.outer*65536) + (x.inner.init*1024)) + (y.outer*64)), 1, 64)] = x64(0f)
+      }
+      for (k.outer, 0, 64) {
+        for (k.inner, 0, 16) {
+          for (x.inner, 0, 64) {
+            C[ramp((((x.outer*65536) + (x.inner*1024)) + (y.outer*64)), 1, 64)] = (C[ramp((((x.outer*65536) + (x.inner*1024)) + (y.outer*64)), 1, 64)] + (x64(A[((((x.outer*65536) + (x.inner*1024)) + (k.outer*16)) + k.inner)])*B[ramp((((k.outer*16384) + (k.inner*1024)) + (y.outer*64)), 1, 64)]))
+          }
+        }
+      }
+    }
+  }
+}
+
+Opt3: 0.224174
+```
+
+注意到现在B的访问模式是序列的，而A变成了一列列的访问，这对cache不友好，因此通过改变`ki`和`xi`的顺序，可以让其变得友好些，即
+
+```python
+s[C].reorder(xo, yo, ko, xi, ki, yi)
+```
+
+这回可以看到，运行时间又缩短了一半。
+
+```python
+produce C {
+  for (x.outer, 0, 16) {
+    for (y.outer, 0, 16) {
+      for (x.inner.init, 0, 64) {
+        C[ramp((((x.outer*65536) + (x.inner.init*1024)) + (y.outer*64)), 1, 64)] = x64(0f)
+      }
+      for (k.outer, 0, 128) {
+        for (x.inner, 0, 64) {
+          for (k.inner, 0, 8) {
+            C[ramp((((x.outer*65536) + (x.inner*1024)) + (y.outer*64)), 1, 64)] = (C[ramp((((x.outer*65536) + (x.inner*1024)) + (y.outer*64)), 1, 64)] + (x64(A[((((x.outer*65536) + (x.inner*1024)) + (k.outer*8)) + k.inner)])*B[ramp((((k.outer*8192) + (k.inner*1024)) + (y.outer*64)), 1, 64)]))
+          }
+        }
+      }
+    }
+  }
+}
+
+Opt4: 0.107459
+```
 
 ## References
 * TVM Tutorial: [*How to optimize GEMM on CPU*](https://docs.tvm.ai/tutorials/optimize/opt_gemm.html#sphx-glr-tutorials-optimize-opt-gemm-py)
