[blog] Update TVM GEMM (packing)

--- a/_posts/2020-03-19-tvm-gemm.md
+++ b/_posts/2020-03-19-tvm-gemm.md
@@ -217,6 +217,65 @@ produce C {
 Opt4: 0.107459
 ```
 
+## 数组打包(packing)
+因为前面我们已经执行了tiling，虽然这可以提升局部性，但是行与行之间的元素依然没有存储在一起，需要跳掉后面的元素才能访问到。因此，比较好的方法则是改变数组的排列方式，从而确保在同一个block里的元素在顺序内存里也是**连续的**。
+
+![array packing](https://github.com/dmlc/web-data/raw/master/tvm/tutorial/array-packing.png)
+
+对应的TVM代码如下。
+
+```python
+# We have to re-write the algorithm slightly.
+packedB = tvm.compute((N / bn, K, bn), lambda x, y, z: B[y, x * bn + z], name='packedB')
+C = tvm.compute((M, N),
+                lambda x, y: tvm.sum(A[x, k] * packedB[y // bn, k, tvm.indexmod(y, bn)], axis=k),
+                name = 'C')
+
+s = tvm.create_schedule(C.op)
+
+# tiling
+# spilting
+# reorder
+# vertorize
+
+x, y, z = s[packedB].op.axis
+s[packedB].vectorize(z)
+s[packedB].parallel(x)
+```
+
+运行结果如下，这里稍微改了一下超参数（`bn=32, factor=4`），但性能还是没有显著提升。
+
+```python
+// attr [packedB] storage_scope = "global"
+allocate packedB[float32x32 * 32768]
+produce packedB {
+  parallel (x, 0, 32) {
+    for (y, 0, 1024) {
+      packedB[ramp(((x*32768) + (y*32)), 1, 32)] = B[ramp(((y*1024) + (x*32)), 1, 32)]
+    }
+  }
+}
+produce C {
+  for (x.outer, 0, 32) {
+    for (y.outer, 0, 32) {
+      for (x.inner.init, 0, 32) {
+        C[ramp((((x.outer*32768) + (x.inner.init*1024)) + (y.outer*32)), 1, 32)] = x32(0f)
+      }
+      for (k.outer, 0, 256) {
+        for (x.inner, 0, 32) {
+          for (k.inner, 0, 4) {
+            C[ramp((((x.outer*32768) + (x.inner*1024)) + (y.outer*32)), 1, 32)] = (C[ramp((((x.outer*32768) + (x.inner*1024)) + (y.outer*32)), 1, 32)] + (x32(A[((((x.outer*32768) + (x.inner*1024)) + (k.outer*4)) + k.inner)])*packedB[ramp((((y.outer*32768) + (k.outer*128)) + (k.inner*32)), 1, 32)]))
+          }
+        }
+      }
+    }
+  }
+}
+
+Opt5: 0.109478
+```
+
+
 ## References
 * TVM Tutorial: [*How to optimize GEMM on CPU*](https://docs.tvm.ai/tutorials/optimize/opt_gemm.html#sphx-glr-tutorials-optimize-opt-gemm-py)
 * TVM Tutorial: [*Schedule Primitives in TVM*](https://docs.tvm.ai/tutorials/language/schedule_primitives.html)
