[blog] Update TVM GEMM (cache)

--- a/_posts/2020-03-19-tvm-gemm.md
+++ b/_posts/2020-03-19-tvm-gemm.md
@@ -275,6 +275,68 @@ produce C {
 Opt5: 0.109478
 ```
 
+## 写缓存(cache)
+在blocking之后，写C数组是按块写的，内存访问模式并非序列(sequential)，因此可以通过利用一个序列cache来存储所有的block结果，然后当block结果都出来时再写到C中。TVM代码如下。
+
+```python
+# Allocate write cache
+CC = s.cache_write(C, 'global')
+
+xo, yo, xi, yi = s[C].tile(C.op.axis[0], C.op.axis[1], x_factor=bn, y_factor=bn)
+
+# Write cache is computed at yo
+s[CC].compute_at(s[C], yo)
+# New inner axes
+xc, yc = s[CC].op.axis
+
+k, = s[CC].op.reduce_axis
+ko, ki = s[CC].split(k, factor=4)
+s[CC].reorder(ko, xc, ki, yc)
+s[CC].unroll(ki)
+s[CC].vectorize(yc)
+```
+
+结果又是做了负向优化...
+
+```python
+// attr [packedB] storage_scope = "global"
+allocate packedB[float32x32 * 32768]
+// attr [C.global] storage_scope = "global"
+allocate C.global[float32 * 1024]
+produce packedB {
+  parallel (x, 0, 32) {
+    for (y, 0, 1024) {
+      packedB[ramp(((x*32768) + (y*32)), 1, 32)] = B[ramp(((y*1024) + (x*32)), 1, 32)]
+    }
+  }
+}
+produce C {
+  for (x.outer, 0, 32) {
+    for (y.outer, 0, 32) {
+      produce C.global {
+        for (x.c.init, 0, 32) {
+          C.global[ramp((x.c.init*32), 1, 32)] = x32(0f)
+        }
+        for (k.outer, 0, 256) {
+          for (x.c, 0, 32) {
+            C.global[ramp((x.c*32), 1, 32)] = (C.global[ramp((x.c*32), 1, 32)] + (x32(A[(((x.outer*32768) + (x.c*1024)) + (k.outer*4))])*packedB[ramp(((y.outer*32768) + (k.outer*128)), 1, 32)]))
+            C.global[ramp((x.c*32), 1, 32)] = (C.global[ramp((x.c*32), 1, 32)] + (x32(A[((((x.outer*32768) + (x.c*1024)) + (k.outer*4)) + 1)])*packedB[ramp((((y.outer*32768) + (k.outer*128)) + 32), 1, 32)]))
+            C.global[ramp((x.c*32), 1, 32)] = (C.global[ramp((x.c*32), 1, 32)] + (x32(A[((((x.outer*32768) + (x.c*1024)) + (k.outer*4)) + 2)])*packedB[ramp((((y.outer*32768) + (k.outer*128)) + 64), 1, 32)]))
+            C.global[ramp((x.c*32), 1, 32)] = (C.global[ramp((x.c*32), 1, 32)] + (x32(A[((((x.outer*32768) + (x.c*1024)) + (k.outer*4)) + 3)])*packedB[ramp((((y.outer*32768) + (k.outer*128)) + 96), 1, 32)]))
+          }
+        }
+      }
+      for (x.inner, 0, 32) {
+        for (y.inner, 0, 32) {
+          C[((((x.outer*32768) + (x.inner*1024)) + (y.outer*32)) + y.inner)] = C.global[((x.inner*32) + y.inner)]
+        }
+      }
+    }
+  }
+}
+
+Opt6: 0.115978
+```
 
 ## References
 * TVM Tutorial: [*How to optimize GEMM on CPU*](https://docs.tvm.ai/tutorials/optimize/opt_gemm.html#sphx-glr-tutorials-optimize-opt-gemm-py)
