[blog] Update TVM GEMM (parallelism)

--- a/_posts/2020-03-19-tvm-gemm.md
+++ b/_posts/2020-03-19-tvm-gemm.md
@@ -338,8 +338,59 @@ produce C {
 Opt6: 0.115978
 ```
 
+## 并行化(parallelism)
+最后可以利用多线程技术，在TVM中同样只用一行代码。
+
+```python
+s[C].parallel(xo)
+```
+
+得到结果如下，终于达到0.1s以内。
+
+```python
+// attr [packedB] storage_scope = "global"
+allocate packedB[float32x32 * 32768]
+produce packedB {
+  parallel (x, 0, 32) {
+    for (y, 0, 1024) {
+      packedB[ramp(((x*32768) + (y*32)), 1, 32)] = B[ramp(((y*1024) + (x*32)), 1, 32)]
+    }
+  }
+}
+produce C {
+  parallel (x.outer, 0, 32) {
+    // attr [C.global] storage_scope = "global"
+    allocate C.global[float32 * 1024]
+    for (y.outer, 0, 32) {
+      produce C.global {
+        for (x.c.init, 0, 32) {
+          C.global[ramp((x.c.init*32), 1, 32)] = x32(0f)
+        }
+        for (k.outer, 0, 256) {
+          for (x.c, 0, 32) {
+            C.global[ramp((x.c*32), 1, 32)] = (C.global[ramp((x.c*32), 1, 32)] + (x32(A[(((x.outer*32768) + (x.c*1024)) + (k.outer*4))])*packedB[ramp(((y.outer*32768) + (k.outer*128)), 1, 32)]))
+            C.global[ramp((x.c*32), 1, 32)] = (C.global[ramp((x.c*32), 1, 32)] + (x32(A[((((x.outer*32768) + (x.c*1024)) + (k.outer*4)) + 1)])*packedB[ramp((((y.outer*32768) + (k.outer*128)) + 32), 1, 32)]))
+            C.global[ramp((x.c*32), 1, 32)] = (C.global[ramp((x.c*32), 1, 32)] + (x32(A[((((x.outer*32768) + (x.c*1024)) + (k.outer*4)) + 2)])*packedB[ramp((((y.outer*32768) + (k.outer*128)) + 64), 1, 32)]))
+            C.global[ramp((x.c*32), 1, 32)] = (C.global[ramp((x.c*32), 1, 32)] + (x32(A[((((x.outer*32768) + (x.c*1024)) + (k.outer*4)) + 3)])*packedB[ramp((((y.outer*32768) + (k.outer*128)) + 96), 1, 32)]))
+          }
+        }
+      }
+      for (x.inner, 0, 32) {
+        for (y.inner, 0, 32) {
+          C[((((x.outer*32768) + (x.inner*1024)) + (y.outer*32)) + y.inner)] = C.global[((x.inner*32) + y.inner)]
+        }
+      }
+    }
+  }
+}
+
+Opt7: 0.052135
+```
+
+比原来的baseline版本提升了58倍，但距离NumPy的MKL版本依然存在6.25倍的距离。
+
 ## References
 * TVM Tutorial: [*How to optimize GEMM on CPU*](https://docs.tvm.ai/tutorials/optimize/opt_gemm.html#sphx-glr-tutorials-optimize-opt-gemm-py)
 * TVM Tutorial: [*Schedule Primitives in TVM*](https://docs.tvm.ai/tutorials/language/schedule_primitives.html)
-* CSAPP
+* CSAPP第5章：优化程序性能，第6章：存储器层次结构
 * Manas Sahni, [*Anatomy of a High-Speed Convolution*](https://sahnimanas.github.io/post/anatomy-of-a-high-performance-convolution/), [中文](https://zhuanlan.zhihu.com/p/85344625)
