[blog] Change TVM te, gemm name

--- a/_posts/2020-03-19-tvm-te.md
+++ b/_posts/2020-03-19-tvm-te.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: TVM - Schedule
+title: TVM - Tensor Expression
 tags: [dl, tvm]
 ---
 
-本文以向量加法为例，记录TVM常用的调度(schedule)及生成对应的lower后的代码。
+本文以向量加法为例，记录TVM最最基本的Tensor Expression的使用，以及简单的编译运行流程。
 
 <!--more-->
 
