[blog] Update materials

--- a/_posts/2020-03-24-spa-nju.md
+++ b/_posts/2020-03-24-spa-nju.md
@@ -211,3 +211,6 @@ $$
 3. 类层次分析(class hierarchy analysis, CHA)
 4. 指针分析(pointer analysis, PTA)
 5. 上下文敏感指针分析(context-sensitive PTA)
+
+## 其他参考资料
+* 熊英飞老师（北京大学），[软件分析技术(Software Analysis)](https://xiongyingfei.github.io/SA/2019/main.htm)
