--- a/_posts/2020-03-21-tvm-gcn.md
+++ b/_posts/2020-03-21-tvm-gcn.md
@@ -47,3 +47,5 @@ Print the first five outputs from TVM execution
 Test accuracy of TVM results: 81.40%
 Mean inference time (std dev): 6.41 ms (0.11 ms)
 ```
+
+遗憾的是，v0.6的TVM还没有`from_pytorch`导入模型的功能，因此所有的NN都要重新在Relay定义一遍，没有办法采用[新教程](https://docs.tvm.ai/tutorials/frontend/from_pytorch.html)中的方法。
