[blog] Update Relay IR visualization

--- a/_posts/2020-03-21-tvm-gcn.md
+++ b/_posts/2020-03-21-tvm-gcn.md
@@ -49,3 +49,34 @@ Mean inference time (std dev): 6.41 ms (0.11 ms)
 ```
 
 遗憾的是，v0.6的TVM还没有`from_pytorch`导入模型的功能，因此所有的NN都要重新在Relay定义一遍，没有办法采用[新教程](https://docs.tvm.ai/tutorials/frontend/from_pytorch.html)中的方法。
+
+其中的
+```python
+func = relay.Function(...)
+mod = relay.Module.from_expr(func) # tvm-0.7 tvm.IRModule.from_expr
+print(mod)
+```
+
+可以输出Relay IR生成的计算图(computational graph)/数据流图(data flow graph)。
+```
+v0.0.4
+def @main(%layers.1.weight: Tensor[(16, 7), float32], %layers.0.weight: Tensor[(1433, 16), float32], %infeats: Tensor[(2708, 1433), float32], %layers.0.bias: Tensor[(16), float32], %layers.1.bias: Tensor[(7), float32]) -> Tensor[(2708, 7), float32] {
+  %0 = transpose(%layers.1.weight, axes=None) /* ty=Tensor[(7, 16), float32] */;
+  %1 = transpose(%layers.0.weight, axes=None) /* ty=Tensor[(16, 1433), float32] */;
+  %2 = multiply(%infeats, meta[relay.Constant][0] /* ty=Tensor[(2708, 1), float32] */ /* ty=Tensor[(2708, 1), float32] */) /* ty=Tensor[(2708, 1433), float32] */;
+  %3 = nn.dense(%1, %2, units=None) /* ty=Tensor[(16, 2708), float32] */;
+  %4 = nn.sparse_dense(%3, meta[relay.Constant][1] /* ty=Tensor[(13264), float32] */ /* ty=Tensor[(13264), float32] */, meta[relay.Constant][2] /* ty=Tensor[(13264), int32] */ /* ty=Tensor[(13264), int32] */, meta[relay.Constant][3] /* ty=Tensor[(2709), int32] */ /* ty=Tensor[(2709), int32] */) /* ty=Tensor[(16, 2708), float32] */;
+  %5 = transpose(%4, axes=None) /* ty=Tensor[(2708, 16), float32] */;
+  %6 = multiply(%5, meta[relay.Constant][0] /* ty=Tensor[(2708, 1), float32] */ /* ty=Tensor[(2708, 1), float32] */) /* ty=Tensor[(2708, 16), float32] */;
+  %7 = nn.bias_add(%6, %layers.0.bias, axis=-1) /* ty=Tensor[(2708, 16), float32] */;
+  %8 = nn.relu(%7) /* ty=Tensor[(2708, 16), float32] */;
+  %9 = multiply(%8, meta[relay.Constant][0] /* ty=Tensor[(2708, 1), float32] */ /* ty=Tensor[(2708, 1), float32] */) /* ty=Tensor[(2708, 16), float32] */;
+  %10 = nn.dense(%0, %9, units=None) /* ty=Tensor[(7, 2708), float32] */;
+  %11 = nn.sparse_dense(%10, meta[relay.Constant][1] /* ty=Tensor[(13264), float32] */ /* ty=Tensor[(13264), float32] */, meta[relay.Constant][2] /* ty=Tensor[(13264), int32] */ /* ty=Tensor[(13264), int32] */, meta[relay.Constant][3] /* ty=Tensor[(2709), int32] */ /* ty=Tensor[(2709), int32] */) /* ty=Tensor[(7, 2708), float32] */;
+  %12 = transpose(%11, axes=None) /* ty=Tensor[(2708, 7), float32] */;
+  %13 = multiply(%12, meta[relay.Constant][0] /* ty=Tensor[(2708, 1), float32] */ /* ty=Tensor[(2708, 1), float32] */) /* ty=Tensor[(2708, 7), float32] */;
+  nn.bias_add(%13, %layers.1.bias, axis=-1) /* ty=Tensor[(2708, 7), float32] */
+}
+
+// meta data omitted. you can use show_meta_data=True to include meta data
+```
